# cuba-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
cuba-cli/: Cargo.toml
cuba-cli/src/: main.rs
cuba-cli/src/commands/: cai.rs  count.rs  enc.rs  fop.rs  gc.rs  mod.rs  optimal.rs  optimize.rs  rscu.rs  slide.rs  tai.rs
cuba-core/: Cargo.toml
cuba-core/src/: lib.rs  sequence.rs
cuba-core/src/metrics/: cai.rs  fop.rs  mod.rs
cubar-cli/: Cargo.toml
cubar-cli/src/: main.rs
cubar-cli/src/commands/: cai.rs  count.rs  enc.rs  fop.rs  gc.rs  mod.rs  optimal.rs  optimize.rs  rscu.rs  slide.rs  tai.rs
cubar-core/: Cargo.toml
cubar-core/src/: count.rs  genetic_code.rs  optimize.rs  slide.rs
cubar-core/src/metrics/: dp.rs  enc.rs  gc.rs  rscu.rs  tai.rs
test_data/: benchmark.sh  r_cai.csv  r_codon_counts.csv  r_enc.csv  r_gc.csv  r_rscu.csv  ref.fasta  run_cubar.R  rust_cai.csv  rust_enc.csv  rust_enc_v2.csv  rust_gc.csv  rust_rscu.csv  test.fasta  yeast500.fasta  yeast_exp.tsv  yeast_ref100.fasta
