[package]
name = "cuba-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cuba-rs"
path = "src/main.rs"

[dependencies]
cuba-core = { path = "../cuba-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
