[package]
name = "cubar"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cubar"
path = "src/main.rs"

[dependencies]
cubar-core = { path = "../cubar-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
